# sg-pursuit

./: .gitignore  CMakeLists.txt  EMS.py  LICENSE  MANIFEST.in  README.md  __init__.py  example.py  fast_pcst.h  get_cpu.c  get_cpu.h  head_tail_proj.h  head_tail_proj_test.c  loss.c  loss.h  loss_test.c  main_wrapper.c  math_utils.c  math_utils.h  run.sh  setup.py  spammer_pre_processing.py  sparse_algorithms.c  sparse_algorithms.h  sparse_algorithms_test.c  sparse_learning.h  test_module.py
SG_Pursuit_Dense/: SGPursuit_Dense.py  sg_pursuit_demo1.py
c/: fast_pcst.c  fast_pcst_test.c  head_tail_proj.c  main_wrapper.c
data_chicago/: chicago_BATTERY_case_25.pkl  chicago_BATTERY_case_26.pkl  chicago_BATTERY_case_27.pkl  chicago_BATTERY_case_29.pkl  chicago_BATTERY_case_33.pkl  chicago_BATTERY_case_36.pkl  chicago_BATTERY_case_37.pkl  chicago_BATTERY_case_4.pkl  chicago_BATTERY_case_40.pkl  chicago_BATTERY_case_44.pkl  chicago_BATTERY_case_45.pkl  chicago_BATTERY_case_5.pkl  chicago_BATTERY_case_51.pkl  chicago_BATTERY_case_6.pkl  chicago_BATTERY_case_7.pkl  chicago_BURGLARY_case_10.pkl  chicago_BURGLARY_case_2.pkl  chicago_BURGLARY_case_35.pkl  chicago_BURGLARY_case_42.pkl  chicago_BURGLARY_case_43.pkl  chicago_BURGLARY_case_46.pkl
demo1/: sg_pursuit_demo1.py
fucntions/: PCA.py
functions/: EMS.py  PCA.py
input/data_chicago/: chicago_BATTERY_case_0.pkl  chicago_BATTERY_case_1.pkl  chicago_BATTERY_case_10.pkl  chicago_BATTERY_case_11.pkl  chicago_BATTERY_case_12.pkl  chicago_BATTERY_case_13.pkl  chicago_BATTERY_case_14.pkl  chicago_BATTERY_case_15.pkl  chicago_BATTERY_case_16.pkl  chicago_BATTERY_case_17.pkl  chicago_BATTERY_case_18.pkl  chicago_BATTERY_case_19.pkl  chicago_BATTERY_case_2.pkl  chicago_BATTERY_case_20.pkl  chicago_BATTERY_case_21.pkl  chicago_BATTERY_case_22.pkl  chicago_BATTERY_case_23.pkl  chicago_BATTERY_case_24.pkl  chicago_BATTERY_case_28.pkl  chicago_BATTERY_case_3.pkl  chicago_BATTERY_case_30.pkl  chicago_BATTERY_case_31.pkl  chicago_BATTERY_case_32.pkl  chicago_BATTERY_case_34.pkl  chicago_BATTERY_case_35.pkl  chicago_BATTERY_case_38.pkl  chicago_BATTERY_case_39.pkl  chicago_BATTERY_case_41.pkl  chicago_BATTERY_case_42.pkl  chicago_BATTERY_case_43.pkl  chicago_BATTERY_case_46.pkl  chicago_BATTERY_case_47.pkl  chicago_BATTERY_case_48.pkl  chicago_BATTERY_case_49.pkl  chicago_BATTERY_case_50.pkl  chicago_BATTERY_case_8.pkl  chicago_BATTERY_case_9.pkl  chicago_BURGLARY_case_0.pkl  chicago_BURGLARY_case_1.pkl  chicago_BURGLARY_case_11.pkl  (+43 more)
input/dense_supgraph/simu_fig4/: VaryingAttribute_numAtt_20.pkl  VaryingClusterSizes_numCluster_30_100_case-1.pkl  VaryingClusterSizes_numCluster_30_100_case-10.pkl  VaryingClusterSizes_numCluster_30_100_case-11.pkl  VaryingClusterSizes_numCluster_30_100_case-12.pkl  VaryingClusterSizes_numCluster_30_100_case-13.pkl  (+243 more)
output/: log.txt  output_chicago.pkl  result-VaryingAtt-adjust-debug.txt  result-VaryingAtt-adjust.txt  result-VaryingAtt-adjust2.txt  result-VaryingAtt-debug.txt  result-VaryingAtt-new.txt  result-VaryingAtt-new1.txt  result-VaryingAtt-singleCore.txt  result-VaryingAtt.txt  result-VaryingClusterSize-new.txt  result-VaryingClusterSize-singleCore.txt  result-VaryingClusterSize.txt  result-VaryingNumCluster-adjust.txt  result-VaryingNumCluster-adjust2.txt  result-VaryingNumCluster-new.txt  result-VaryingNumCluster-singleCore.txt  result-VaryingNumCluster.txt
sg_pursuit_anomalous/: test_chicago_crime_data.py  test_yelp_data.py
sg_pursuit_dense/: .nfs00000000160061cf00000075  .nfs000000001638ae8400000074  AN-01.txt  CN-03.txt  CS-04.txt  SGPursuit_Dense.py  debug-921-am.txt  result-VaryingAtt.txt  result-clustersize.txt  result-numcluster.txt  result.txt  sg_pursuit_dense.py  test_sg_pursuit_dense.py  vary-CS-5-07.txt  vary-CS-5-400-07.txt  varyCS-3-06.txt  varyclustersize-3-03.txt  varyingattnum-01.txt  veryCN-6-04.txt
sparse_learning/: __init__.py  data_process.py  fast_pcst.py  file_utils.py  ghtp_algo.py  graph_utils.py  loss_func.py  proj_algo.py  test_module.py
utils/: base_function.py  data_convert.py  process_apdm.py  sg_pursuit_demo1.py
